# service-fabric-cpp

./: .gitignore  CMakeLists.txt  README.md  ThirdPartyNotice.txt  vcpkg.json
.github/workflows/: build.yaml
cmake/: ConfigFabric.cmake  ImportFabric.cmake  clang-format.cmake
docs/: development.md
examples/: CMakeLists.txt
examples/echoapp/: CMakeLists.txt  app_instance.cpp  app_instance.hpp  async_context.cpp  async_context.hpp  echo_main.cpp  echo_server.cpp  echo_server.h  echo_server.hpp  loop_timer.hpp  service_factory.cpp  service_factory.hpp  string_result.cpp  string_result.hpp
examples/echoapp/manifests/: ServiceManifest.xml
examples/fabricclient/: CMakeLists.txt  asio_main.cpp  compose_main.cpp  property_main.cpp  wait_main.cpp
examples/feparse/: CMakeLists.txt  feparse.cpp
examples/kvstore/: CMakeLists.txt  hello.ixx  kvclient.cpp  kvcurd.ixx  kvstore-curd.cppm  kvstore-transport.cppm  kvstore.cppm  kvstore.exe.cfg  kvstore.ixx  kvstore_main.cpp  kvtransport.ixx  world.ixx
examples/kvstore/manifests/: ServiceManifest.xml
fabric_libs/: CMakeLists.txt
idls/: CMakeLists.txt
include/servicefabric/: asio_callback.h  compose.h  waitable_callback.h
libs/: CMakeLists.txt
libs/fabric_common/: CMakeLists.txt  README.md
libs/fabric_common/include/: AsyncOperation.h  AsyncOperationState.h  ComAsyncOperationContext.h  ComComponentRoot.h  ComPointer.h  ComProxyAsyncOperation.h  ComUnknownBase.h  ComUtility.h  CompletedAsyncOperation.h  ComponentRoot.h  ErrorCode.h  ErrorCodeValue.h  MoveUPtr.h  RootedObject.h  RootedObjectPointer.h  stdafx.h
libs/fabric_common/src/: AsyncOperation.cpp  AsyncOperationState.cpp  ComAsyncOperationContext.cpp  ComProxyAsyncOperation.cpp  ComUnknownBase.cpp  ComUtility.cpp  CompletedAsyncOperation.cpp  ComponentRoot.cpp  ErrorCode.cpp
libs/fabric_error/: CMakeLists.txt  fabric_error.cpp
libs/fabric_error/include/servicefabric/: fabric_error.hpp
libs/fabric_ext/: CMakeLists.txt
libs/fabric_ext/include/servicefabric/: activation_helpers.hpp  asio_callback.hpp  async_context.hpp  compose.hpp  fabric_client.hpp  string_result.hpp  waitable_callback.hpp  winrt.hpp
libs/fabric_ext/src/: activation_helpers.cpp  async_context.cpp  fabric_client.cpp  string_result.cpp  waitable_callback.cpp
libs/fabric_ext2/: CMakeLists.txt
libs/fabric_ext2/include/sf/: AsyncOperation.hpp
libs/fabric_ext2/src/: AsyncOperation.cpp
libs/fabric_idls/: CMakeLists.txt
libs/fabric_import_libs/: CMakeLists.txt
libs/fabric_internal/: CMakeLists.txt
libs/fabric_internal_ext/: CMakeLists.txt
libs/fabric_internal_ext/include/servicefabric/: transport_dummy_client_conn_handler.hpp  transport_dummy_client_notification_handler.hpp  transport_dummy_msg_disposer.hpp  transport_dummy_server_conn_handler.hpp  transport_message.hpp
libs/fabric_internal_ext/src/: transport_dummy_client_conn_handler.cpp  transport_dummy_client_notification_handler.cpp  transport_dummy_msg_disposer.cpp  transport_dummy_server_conn_handler.cpp  trasnport_message.cpp
libs/fabric_winrt/: CMakeLists.txt
libs/fabric_winrt/idl/: Microsoft.ServiceFabric.FabricCommon.FabricClient.idl  Microsoft.ServiceFabric.FabricCommon.FabricRuntime.idl  Microsoft.ServiceFabric.FabricCommon.FabricTransport.idl  Microsoft.ServiceFabric.FabricCommon.idl  Microsoft.ServiceFabric.idl
libs/fabric_winrt/idlbase2/: Windows.Win32.Foundation.idl
moderncom/: CMakeLists.txt
scripts/: dll2lib.ps1  echomain_ctl.ps1  install_sf_runtime.ps1  kvstore_ctl.ps1
tests/: CMakeLists.txt  echo_script_test.ps1  examples_script_test.ps1
tests/fabric_common_tests/: CMakeLists.txt  fabric_common_bare_test.cpp  fabric_common_test.cpp
tests/fabric_ext2_tests/: AsyncOperation_test.cpp  CMakeLists.txt  CompletedAsyncOperation.cpp  CompletedAsyncOperation.hpp  ComponentB.cpp  ComponentB.hpp  fabric_ext2_test_main.cpp
tests/fabric_tests/: CMakeLists.txt  fabric_asio_test.cpp  fabric_error_test.cpp  fabric_winrt_test.cpp
tests/fabric_transport/: CMakeLists.txt  client_event_handler.hpp  client_notification_handler.hpp  conn_handler.hpp  fabric_transport_test.cpp  fabric_transport_test.exe.cfg  message.hpp  msg_disposer.hpp  request_handler.hpp
tests/service_communication/: CMakeLists.txt  conn_event_handler.hpp  conn_handler.hpp  message.hpp  notification_handler.hpp  request_handler.hpp  service_communication_test.cpp  service_communication_test.exe.cfg
